docs-archive/apache-airflow-providers-tableau/2.1.1/_sources/_api/airflow/providers/tableau/hooks/tableau/index.rst.txt
:mod:`airflow.providers.tableau.hooks.tableau`
==============================================

.. py:module:: airflow.providers.tableau.hooks.tableau


Module Contents
---------------

.. py:exception:: TableauJobFailedException

   Bases: :class:`airflow.exceptions.AirflowException`

   An exception that indicates that a Job failed to complete.


.. py:class:: TableauJobFinishCode

   Bases: :class:`enum.Enum`

   The finish code indicates the status of the job.
   .. seealso:: https://help.tableau.com/current/api/rest_api/en-us/REST/rest_api_ref.htm#query_job

   .. attribute:: PENDING
      

      

   .. attribute:: SUCCESS
      :annotation: = 0

      

   .. attribute:: ERROR
      :annotation: = 1

      

   .. attribute:: CANCELED
      :annotation: = 2

      


.. py:class:: TableauHook(site_id: Optional[str] = None, tableau_conn_id: str = default_conn_name)

   Bases: :class:`airflow.hooks.base.BaseHook`

   Connects to the Tableau Server Instance and allows to communicate with it.

   Can be used as a context manager: automatically authenticates the connection
   when opened and signs out when closed.

   .. seealso:: https://tableau.github.io/server-client-python/docs/

   :param site_id: The id of the site where the workbook belongs to.
       It will connect to the default site if you don't provide an id.
   :type site_id: Optional[str]
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server.
   :type tableau_conn_id: str

   .. attribute:: conn_name_attr
      :annotation: = tableau_conn_id

      

   .. attribute:: default_conn_name
      :annotation: = tableau_default

      

   .. attribute:: conn_type
      :annotation: = tableau

      

   .. attribute:: hook_name
      :annotation: = Tableau

      

   
   .. method:: __enter__(self)



   
   .. method:: __exit__(self, exc_type: Any, exc_val: Any, exc_tb: Any)



   
   .. method:: get_conn(self)

      Sign in to the Tableau Server.

      :return: an authorized Tableau Server Context Manager object.
      :rtype: tableauserverclient.server.Auth.contextmgr



   
   .. method:: get_all(self, resource_name: str)

      Get all items of the given resource.
      .. see also:: https://tableau.github.io/server-client-python/docs/page-through-results

      :param resource_name: The name of the resource to paginate.
          For example: jobs or workbooks.
      :type resource_name: str
      :return: all items by returning a Pager.
      :rtype: tableauserverclient.Pager



   
   .. method:: get_job_status(self, job_id: str)

      Get the current state of a defined Tableau Job.
      .. see also:: https://tableau.github.io/server-client-python/docs/api-ref#jobs

      :param job_id: The id of the job to check.
      :type job_id: str
      :return: An Enum that describe the Tableau job’s return code
      :rtype: TableauJobFinishCode



   
   .. method:: wait_for_state(self, job_id: str, target_state: TableauJobFinishCode, check_interval: float)

      Wait until the current state of a defined Tableau Job is equal
      to target_state or different from PENDING.

      :param job_id: The id of the job to check.
      :type job_id: str
      :param target_state: Enum that describe the Tableau job’s target state
      :type target_state: TableauJobFinishCode
      :param check_interval: time in seconds that the job should wait in
          between each instance state checks until operation is completed
      :type check_interval: float
      :return: return True if the job is equal to the target_status, False otherwise.
      :rtype: bool




